fixed spacing for about page with icons overlapping

--- a/ML/assets/css/main.css
+++ b/ML/assets/css/main.css
@@ -937,8 +937,8 @@ p#linked-in-tag, p#instagram-tag, p#github, p#tiktok, p#resume{
   object-fit: cover;
 }
 .about .about-front{
-  height: 100vh;
-  position: relative;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -966,9 +966,6 @@ p#linked-in-tag, p#instagram-tag, p#github, p#tiktok, p#resume{
 
 .about .about-text p {
   width: 75%;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
   font-family: var(--default-font);
   line-height: 25px;
   font-weight: 400;
@@ -1030,6 +1027,11 @@ p#linked-in-tag, p#instagram-tag, p#github, p#tiktok, p#resume{
   border-bottom: 2px solid var(--accent-color);
 }
 @media (max-width: 768px) {
+  .about .about-front{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .img {
     height: 30vh;
   }
@@ -1051,6 +1053,10 @@ p#linked-in-tag, p#instagram-tag, p#github, p#tiktok, p#resume{
     flex-direction: column;
     justify-content: center;
   }
+  .reading-list {
+    padding-top:50px;
+  }
+  
 }
 /*--------------------------------------------
 # Wreslting Page
